Fix: main text in home section did not make much contrast with the background. Fix: icon in btn inside the 'more info' area has the colour blue on mouse hover

--- a/assets/css/buttons.less
+++ b/assets/css/buttons.less
@@ -26,7 +26,7 @@
 #more-information-os .btn-link {
   color: #fff;
   margin-top: 5em;
-  &:hover {
+  &:hover, &:hover i {
     color: @opensuse-blue
   }
 }
