--- a/assets/css/sections.less
+++ b/assets/css/sections.less
@@ -2,14 +2,14 @@
 #opensuse-os {
   background: @opensuse-os-background;
   padding-top: 145px;
+  padding-bottom: 0;
   transition: all .5s ease;
-  h2 {
-    color: darken(@opensuse-blue, 11%);
-    text-shadow: 0 1px lighten(@opensuse-blue, 16%);
-    font-weight: 400;
+  h3 {
+    color: @opensuse-green;
+    font-weight: 300;
     margin: 0;
     padding-top: 30px;
-    padding-bottom: 50px;
+    padding-bottom: 80px;
   }
   h1 {
     color: @opensuse-green;
@@ -29,7 +29,7 @@
   }
   // fin temporal
   .os-main {
-    margin-bottom: 60px;
+    margin-bottom: 80px;
     .col-sm-6 {
       padding: 50px;
       height: 350px;
